feat: add input value-date && add popular holidays btns

--- a/index.html
+++ b/index.html
@@ -11,21 +11,33 @@
 
 <body>
     <div class="container">
+
+        <div class="popular-container">
+            <button class="btn btn-ny"> New Year 2024</button>
+            <button class="btn btn-gd"> Groundhog Day</button>
+            <button class="btn btn-sp"> Saint Patrick's Day</button>
+            <button class="btn btn-id"> Independence Day</button>
+            <button class="btn btn-hw"> Halloween</button>
+            <button class="btn btn-cs"> Christmas </button>
+        </div>
+
         <h1>New year 2024</h1>
         <div class="time-container">
             <div class="time-element">
-                <p id="days">113</p><i>days</i>
+                <p id="days"></p><i>days</i>
             </div>
             <div class="time-element">
-                <p id="hours">41</p><i>hours</i>
+                <p id="hours"></p><i>hours</i>
             </div>
             <div class="time-element">
-                <p id="mins">31</p><i>minutes</i>
+                <p id="mins"></p><i>minutes</i>
             </div>
             <div class="time-element">
-                <p id="seconds">23</p><i>seconds</i>
+                <p id="seconds"></p><i>seconds</i>
             </div>
-
+        </div>
+        <div class="input-container">
+            <input id="date" type="date" value="2024-01-01">
         </div>
     </div>
 
