--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 
         <div class="popular-container">
             <button class="btn btn-ny"> New Year 2024</button>
-            <button class="btn btn-gd"> Groundhog Day</button>
-            <button class="btn btn-sp"> Saint Patrick's Day</button>
-            <button class="btn btn-id"> Independence Day</button>
-            <button class="btn btn-hw"> Halloween</button>
-            <button class="btn btn-cs"> Christmas </button>
+            <button class="btn btn-gd"> Groundhog Day 2024</button>
+            <button class="btn btn-sp"> Saint Patrick's Day 2024</button>
+            <button class="btn btn-id"> Independence Day 2024</button>
+            <button class="btn btn-hw"> Halloween 2024</button>
+            <button class="btn btn-cs"> Christmas 2024 </button>
+            <button class="btn btn-cs"> Chose your day</button>
+        </div>
+        <div class="input-container">
+            <input id="date" type="date" value="2024-01-01">
         </div>
 
-        <h1>New year 2024</h1>
+        <h1 class="header">New year 2024</h1>
         <div class="time-container">
             <div class="time-element">
                 <p id="days"></p><i>days</i>
@@ -36,9 +40,7 @@
                 <p id="seconds"></p><i>seconds</i>
             </div>
         </div>
-        <div class="input-container">
-            <input id="date" type="date" value="2024-01-01">
-        </div>
+
     </div>
 
 
