feat: add modal window && styles && input type=date scripts

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
             <button class="btn btn-id"> Independence Day 2024</button>
             <button class="btn btn-hw"> Halloween 2024</button>
             <button class="btn btn-cs"> Christmas 2024 </button>
-            <button class="btn btn-cs"> Chose your day</button>
+            <button class="btn btn-choose"> Chose your day</button>
         </div>
-        <div class="input-container">
-            <input id="date" type="date" value="2024-01-01">
+        
+        <div class="modal">
+            <div class="input-container">
+                <input id="date" type="date" value="2024-01-01">
+            </div>
         </div>
-
         <h1 class="header">New year 2024</h1>
         <div class="time-container">
             <div class="time-element">
